--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "n8n-nodes-trigger-discord",
-  "version": "0.8.4",
+  "name": "n8n-nodes-discord-bot-trigger",
+  "version": "0.8.9",
   "description": "A node that triggers a workflow whenever a message from discord is sent.",
   "keywords": [
     "n8n",
@@ -13,15 +13,13 @@
   "license": "MIT",
   "homepage": "https://github.com/SilverBtc/n8n-discord-trigger#readme",
   "author": {
-    "name": "Silver",
+    "name": "Apegurus",
+    "email": "hello@apeguru.dev",
     "forkFrom": "katerlol"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SilverBtc/n8n-discord-trigger.git"
-  },
-  "bugs": {
-    "url": "https://github.com/SilverBtc/n8n-discord-trigger/issues"
+    "url": "https://github.com/Apegurus/n8n-discord-trigger"
   },
   "engines": {
     "node": ">=18.10",
@@ -33,10 +31,10 @@
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
-  "lint": "eslint nodes credentials package.json",
-  "lintfix": "eslint nodes credentials package.json --fix",
-  "lint:prepublish": "eslint -c .eslintrc.prepublish.js nodes credentials package.json",
-  "prepublishOnly": "npm run build && npm run lint:prepublish"
+    "lint": "eslint nodes credentials package.json",
+    "lintfix": "eslint nodes credentials package.json --fix",
+    "lint:prepublish": "eslint -c .eslintrc.prepublish.js nodes credentials package.json",
+    "prepublishOnly": "npm run build && npm run lint:prepublish"  
   },
   "files": [
     "dist"
